src/index.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  /* page padding */
  .page-padding {
    @apply px-6;
  }

  /*covid table*/
  .covid-stats {
    @apply text-center pb-12;
  }

  .covid-stats-date {
    @apply absolute bottom-0 right-10;
  }

  /* Sign page
      ====================== */
  /* input */
  .input {
    @apply rounded-full text-primary-dark bg-secondary-dark my-3 p-2 w-full focus:outline focus:border-primary-dark;
  }

  /* show password icons */
  .show-password-icon {
    @apply absolute bottom-6 right-5 text-primary-dark text-lg cursor-pointer;
  }
}

